<resources>
    <string name="app_name">汽车监控移动端</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_register">没有账号?这里注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_failure">注册失败</string>
    <string name="password_sure">确认密码</string>
    <string name="menu_car">车辆</string>
    <string name="menu_mine">我的</string>
    <string name="model">车型：</string>
    <string name="model_year">出厂年份：</string>
    <string name="plate_number">车牌：</string>
    <string name="brand">品牌：</string>
    <string name="car_status">车况</string>
    <string name="manufacturer">制造商：</string>
    <string name="fuelCapacity">总油量：</string>
    <string name="fuelLevel">当前油量：</string>
    <string name="ignitionState">当前状态：</string>
    <string name="ignitionState_start">启动</string>
    <string name="ignitionState_lock">锁定</string>
    <string name="speed">车速：</string>
    <string name="ml">ml</string>
    <string name="km_h">km/h</string>
    <string name="plate_number_register">车牌号</string>
    <string name="plate_brand_register">品牌</string>
    <string name="plate_model_register">型号</string>
    <string name="plate_device_id_register">汽车唯一编号（请前往车载端查看）</string>
    <string name="vehicle_register_success">提交申请成功，请耐心等待审核通过</string>
    <string name="vehicle_register_failure">提交申请失败，请稍后重试</string>
    <string name="vehicle_register">登记</string>
    <string name="message">消息中心</string>
    <string name="code">源代码：</string>
    <string name="github">https://github.com/Jihannn/VehicleMonitor</string>
    <string name="version">版本号：v1.0.0</string>
    <string name="logout">退出登录</string>
</resources>